[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asfSearchAndDownload"
version = "0.0.1"
description = "Search and download utilities for ASF DAAC (NISAR, Sentinel-1)"
authors = [
    { name = "Ian Joughin", email = "irj@uw.edu" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["SAR", "Sentinel1", "NISAR", "ASF"]
requires-python = ">=3.8"

dependencies = [
    "argparse",
    "asf-search"
]

[tool.setuptools]
packages = ["asfsearchdownload", "asfsearchdownload.searchRegions"]

[tool.setuptools.package-data]
"asfsearchdownload.searchRegions" = ["*.lonlat"]

[project.urls]
Homepage = "https://github.com/fastice/asfSearchAndDownload"
Repository = "https://github.com/fastice/asfSearchAndDownload"

[project.scripts]
ariaDownload = "asfsearchdownload.ariaDownload:main"
"ariaDownload.py" = "asfsearchdownload.ariaDownload:main"
reduces1 = "asfsearchdownload.reduceSentinel1:main"
searchASF = "asfsearchdownload.searchASF:main"
